@@ -1,0 +1,96 @@
+# Cheer.conf template
+ 
+# Pound sign is comment character.
+
+# Config format:
+# name = value
+#
+# Some configs are necessary for program running.
+# Details see iterms with "MUST BE CONFIGURED".
+#
+# Value may be empty.
+# BUT some critical name should have value.
+# Details see iterms with "CANNOT BE EMPTY".
+
+# Serials number of CPE
+#
+# MUST BE CONFIGURED
+# CANNOT BE EMPTY
+#
+# sn =
+
+# URL to upload KPI file
+#
+# MUST BE CONFIGURED
+# CANNOT BE EMPTY
+#
+# NOTE:
+# Slash at the end should be taken into consideration.
+#
+# Upload protocol should be given. e.g.
+# http://
+# ftp://
+# FTP/HTTP supported only.
+#
+# url =
+
+# Upload Port
+#
+# May be configured and cannot be empty.
+# If not be configured, the port will be depended by protocol of url.
+#
+# port =
+
+# Username
+# 
+# May be configured and cannot be empty.
+#
+# username =
+
+# Username
+# 
+# May be configured and cannot be empty.
+#
+# password =
+
+# Whether backup the KPI file after be uploaded successfully.
+#
+# May be configured and cannot be empty.
+# Default is n.
+#
+# need_bak = <Y|y|N|n>
+
+# Specify backup directory.
+#
+# Only effective if need_bak = y 
+# Program will try to create this directory if it's not exited yet.
+# And if it's already exited, the files in it will be reserved.
+# Default is ./backup/
+#
+# bak_dir =
+
+# Specify interval int second to generate KPI and upload it.
+#
+# MUST BE CONFIGURED
+# CANNOT BE EMPTY
+# MUST BE larger than 1.
+#
+# interval =
+
+# Specify debug log level.
+#
+# May be configured and cannot be empty.
+#
+# The higher level are, the more logs will be shown.
+# There are 4 levels by now: panic, error, info, debug.
+#
+# debug_level | logs
+# 0           | no any log
+# 1           | panic
+# 2           | panic, error
+# 3           | panic, error, info
+# 4           | panic, error, debug
+#
+# Level 3 is default and is recommended.
+#
+# debug_level = 3
