@@ -1,3 +1,10 @@
+2013-12-17 v2.0.0.7:
+	* cheer:	[TOP] Rename program name cpe_kpi_emu -> cheer.
+	* main:		[FUN] Remove -l para, debug level set in config file.
+	* cfg:		[FUN] Read debug level in config file.
+	* cfg:		[FUN] Empty value is allowd.
+	* dbg:		[FUN] Add LVL_NON.
+
 2013-12-16 v1.1.0.6:
 	* cfg.c:	Initial version.
 	* main.c:	Use configuration file, remove some cmd parameters.
